[project]
name = "psycho-world"
version = "0.1.0"
description = "DreamCUB-inspired Psycho-World POMDP framework"
authors = [{name = "Psycho Research"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "langchain-community>=0.2.0",
  "langchain-openai>=0.1.0",
  "chromadb>=0.5.0",
  "neo4j>=5.20.0",
  "openai>=1.41.0",
  "transformers>=4.41.0",
  "peft>=0.11.0",
  "accelerate>=0.31.0",
  "torch",
  "gymnasium>=0.29.0",
]

[project.optional-dependencies]
memgpt = ["memgpt>=0.3.0"]

[tool.setuptools.packages.find]
where = ["."]
